--- a/styles/Sidebar.scss
+++ b/styles/Sidebar.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Varela&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@600&family=Varela&display=swap');
 
 .sidebar {
     height: 100vh;
@@ -11,6 +12,12 @@
     flex-direction: column;
     align-items: center;
     padding: 2vh;
+
+    .sidebar-subtitle {
+        font-family: 'Inconsolata', monospace;
+        color: #AAAEBC;
+        margin-top: 1.5vh;
+    }
 
     .sidebar-href {
         width: 15vh;
