--- a/styles/Global.scss
+++ b/styles/Global.scss
@@ -1,7 +1,32 @@
-html {
-    background-color: #141414;
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap'); 
+
+* {
+    font-family: 'Open Sans', sans-serif;
+    text-decoration: none;
+    color: #868892;
 }
 
-body {
+*:visited {
+    text-decoration: none;
+    color: #868892;
+}
+
+html {
+    background-color: #141414;
+    height: 100%;
+    width: 100%;
     margin: 0;
+    padding: 0;
+    font-family: 'Open Sans', sans-serif;
+
+    body {
+        margin: 0;
+        padding: 0;
+        height: 100%;
+        width: 100%;
+    }
+
+    #__next {
+        height: 100%;
+    }
 }
