--- a/styles/Header.scss
+++ b/styles/Header.scss
@@ -49,8 +49,9 @@
             color: black !important;
         }
     
-        .sign-in {
+        .log-in {
             color: white !important;
+            background-color: #444857;
         }
     } 
 }
