--- a/styles/Codepen.scss
+++ b/styles/Codepen.scss
@@ -1,5 +1,5 @@
-body {
-    margin: 0;
+html {
+    height: auto;
 }
 
 .pane {
@@ -7,6 +7,19 @@ body {
     display: flex;
     width: 100%;
     border-radius: 15px;
+}
+
+.iframe {
+    height: 100% !important;
+
+    iframe {
+        background-color: white;
+        border: 0;
+        width: 100%;
+        height: 100%;
+        position: fixed;
+        left: 0;
+    }
 }
 
 
