--- a/styles/Codepen.scss
+++ b/styles/Codepen.scss
@@ -2,22 +2,18 @@ html {
     height: auto;
 }
 
-.pane {
-    height: 100%;
+.editors {
     display: flex;
-    width: 100%;
-    border-radius: 15px;
 }
 
 .iframe {
-    height: 100% !important;
+
 
     iframe {
         background-color: white;
         border: 0;
         width: 100%;
-        height: 100%;
-        position: fixed;
+
         left: 0;
     }
 }
