--- a/styles/Editor.scss
+++ b/styles/Editor.scss
@@ -3,11 +3,10 @@
     flex-basis: 0;
     display: flex;
     flex-direction: column;
-  
 
     .editor-header {
         width: 7rem;
-        background-color: #2f2f2f;
+        background-color: #1d1e22;
 
         .title-svg-container {
             display: flex;
@@ -20,35 +19,43 @@
         }
         
     }
+    .codemirror {
+        height: 100%;
+    }
     .cm-activeLine {
-        background-color: #2f2f2f !important;
+        background-color: #1d1e22 !important;
     }
     .cm-line {
-        background-color: #2f2f2f !important;
+        background-color: #1d1e22 !important;
+    }
+    .cm-editor {
+        height: 100%;
     }
     .cm-content {
-        background: #2f2f2f !important;
+        background: #1d1e22 !important;
         overflow: auto;
-        resize: horizontal !important;
         height: 20rem;
     }
+    .cm-theme-light {
+        height: 100%;
+    }
     .cm-gutters {
-        background: #2f2f2f !important;
+        background: #1d1e22 !important;
         border: none !important ;
     }
 
     .cm-gutter {
-        background-color: #2f2f2f;
+        background-color: #1d1e22;
     }
     .cm-gutterElement {
-        background-color: #2f2f2f;
+        background-color: #1d1e22;
     }
 
     .cm-foldGutter {
-        background-color: #2f2f2f !important;
+        background-color: #1d1e22 !important;
     }
 
     .cm-scroller {
-        background-color: #2f2f2f;
+        background-color: #1d1e22;
     }
 }
