--- a/styles/Editor.scss
+++ b/styles/Editor.scss
@@ -3,6 +3,7 @@
     flex-basis: 0;
     display: flex;
     flex-direction: column;
+    height: 100%;
 
     .editor-header {
         width: 7rem;
