--- a/styles/Global.scss
+++ b/styles/Global.scss
@@ -1,30 +1,39 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap'); 
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap');
 
-
+* {
+    font-family: 'Lato', sans-serif;;
+}
 
 *:visited {
     text-decoration: none;
     color: #868892;
+    margin: 0;
+  
+  
 }
 
 html {
-    background-color: #141414;
-    height: 100%;
+    background-color: #060606;
+    height: 100vh;
     width: 100%;
     margin: 0;
     padding: 0;
     font-family: 'Open Sans', sans-serif;
     text-decoration: none;
     color: #868892;
+    box-sizing: border-box;
+    position: fixed;
 
     body {
         margin: 0;
         padding: 0;
-        height: 100%;
+        min-height: 100%;
         width: 100%;
+        position: fixed;
     }
 
     #__next {
         height: 100%;
+        margin: 0;
     }
 }
