--- a/styles/Header.scss
+++ b/styles/Header.scss
@@ -28,6 +28,10 @@
         .header-icons {
             filter: invert(95%) sepia(100%) saturate(0%) hue-rotate(168deg) brightness(118%) contrast(100%);
         }
+
+        .header-icon1 {
+            filter: invert(95%) sepia(100%) saturate(0%) hue-rotate(168deg) brightness(118%) contrast(100%); 
+        }
     
         input {
             background-color: #252830;
