--- a/styles/Section1.scss
+++ b/styles/Section1.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@700&display=swap');
 
 .section1-container {
-    padding-left: 15vw;
+    padding-left: 3rem;
     padding-top: 3vh;
     display: flex;
     flex-direction: row;
