--- a/styles/Header.scss
+++ b/styles/Header.scss
@@ -2,7 +2,7 @@
 
 
     .header {
-        margin-left: 220px;
+        margin-left: 198px;
         display: flex;
         flex-direction: row;
         align-items: center;
@@ -20,9 +20,9 @@
             display: flex;
             background-color: #252830;
             margin: 1.5vh 1vw;
-            padding: 1.5vh 1vw;
+            padding: 1.3vh 1vw;
             border-radius: 5px;
-            width: 65vw;
+            width: 70vw;
         }
 
         .header-icons {
@@ -47,7 +47,7 @@
             background-color: #252830;
             margin-left: 4px;
             margin-right: 13px;
-            padding: 1.5vh 1vw;
+            padding: 1.6vh 1vw;
             border-radius: 5px;
             white-space: nowrap;
             text-decoration: none;
@@ -64,6 +64,12 @@
         .log-in {
             color: white !important;
             background-color: #444857;
+        }
+
+        .flex-grow-1 {
+            display: flex;
+            flex-grow: 1;
+            justify-content: flex-end;
         }
     } 
 }
