--- a/styles/Sidebar.scss
+++ b/styles/Sidebar.scss
@@ -6,7 +6,7 @@
     .sidebar {
         position: fixed;
         height: 100%;
-        width: 190px;
+        width: 170px;
         background-color: #1e1f26;
         padding: 15px 15px;
         text-align: center;
@@ -18,11 +18,12 @@
             font-family: 'Inconsolata', monospace;
             color: #AAAEBC;
             margin-top: 1.5vh;
+            font-size: 14px;
         }
     
         .sidebar-href {
-            width: 20vh;
-            height: 8vh;
+            width: 17vh;
+            height: 7vh;
             background: linear-gradient(90deg, #4fcf70, #fad648, #a767e5, #12bcfe, #44ce7b);
             background-size: 50% 100%;
             display: flex;
@@ -36,7 +37,7 @@
             background-color: black;
             color: white;
             height: 80%;
-            height: 82%;
+            height: 89%;
             width: 95%;
             display: flex;
             align-items: center;
