--- a/styles/Global.scss
+++ b/styles/Global.scss
@@ -4,12 +4,10 @@
     text-decoration: none;
     color: #868892;
     margin: 0;
-  
-  
 }
 
 html {
-    background-color: #060606;
+    background-color: #131417;
     height: 100vh;
     width: 100%;
     margin: 0;
@@ -26,6 +24,11 @@ html {
         min-height: 100%;
         width: 100%;
         position: fixed;
+    }
+
+    p {
+        margin: 0;
+        color: #c7c9d3;
     }
 
     #__next {
