--- a/styles/Header.scss
+++ b/styles/Header.scss
@@ -68,6 +68,7 @@
 
         .flex-grow-1 {
             display: flex;
+            flex-direction: row;
             flex-grow: 1;
             justify-content: flex-end;
         }
@@ -92,10 +93,6 @@
             align-items: center;
             padding-left: 5px;
             filter: invert(95%) sepia(100%) saturate(0%) hue-rotate(168deg) brightness(118%) contrast(100%);
-
-            button {
-                display: flex;
-            }
 
             .mobile-icon {
                 padding: 6px;
@@ -130,6 +127,15 @@
             white-space: nowrap;
             text-decoration: none;
         }
+
+        .menu-icon {
+            width: 36px;
+            padding: 19px 23px;
+            cursor: pointer;
+            border-radius: 4px;
+            background-color: #5a5f73;
+            border: none;
+        }
     
         .sign-up {
             background-color: #47CF73;
@@ -138,6 +144,12 @@
     
         .sign-in {
             color: white !important;
+        }
+        .flex-grow-1 {
+            display: flex;
+            flex-direction: row;
+            flex-grow: 1;
+            justify-content: flex-end;
         }
     }
 }
