--- a/styles/Section1.scss
+++ b/styles/Section1.scss
@@ -12,6 +12,7 @@
     background-position: right top;
     .container1 {
         width: 40vw;
+        margin-right: 7rem;
         .section1-icon {
             filter: invert(95%) sepia(100%) saturate(0%) hue-rotate(168deg) brightness(118%) contrast(100%);
         }
@@ -51,7 +52,9 @@
     }
     .container2 {
         height: 35rem;
-        width: 33rem;
+        width: 35rem;
+        display: flex;
+        flex-direction: row;
         margin-right: 46px;
         .gray-square {
             background: linear-gradient(109.61deg,#4c4f5a 4.26%,#202125 84.84%);
@@ -61,6 +64,8 @@
             flex-direction: column;
             align-items: flex-end;
             justify-content: center;
+            width: 30vw;
+            margin-right: 3rem;
             .code-example {
                 padding-bottom: 1rem;
                 width: 300px;
@@ -136,23 +141,23 @@
 
 }
 
-.example1 {
-    margin-right: 3rem;
-    position: relative;
-    top: -20px;
-}
+// .example1 {
+//     margin-right: 3rem;
+//     position: relative;
+//     top: -20px;
+// }
 
-.example2 {
-    margin-right: -3rem;
-    position: relative;
+// .example2 {
+//     margin-right: -3rem;
+//     position: relative;
     
-}
+// }
 
-.example3 {
-    margin-right: 5rem;
-    position: relative;
-    bottom: -20px;
-}
+// .example3 {
+//     margin-right: 5rem;
+//     position: relative;
+//     bottom: -20px;
+// }
 
 @media (max-width: 1100px) {
     .section1-container {
@@ -161,9 +166,40 @@
         display: flex;
         flex-direction: column-reverse;
         align-items: center;
+        width: auto;
+        .container2 {
+            width: 100%;
+            height: 23rem;
+            .gray-square {
+                background: linear-gradient(109.61deg, #4c4f5a 4.26%, #202125 84.84%);
+                border-radius: 10px;
+                height: 19.375rem;
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                width: 100%;
+                position: relative;
+            }
+        }
+        .container1 {
+            width: auto;
+        }
+
     }
-    .gray-square {
-        width: 40rem;
+    .example2 {
+        margin-left: -10rem;
+    }
+
+    .example3 {
+        margin-left: -10rem;
+    }
+
+}
+
+
+@media (max-width: 830px) {
+    .section1-container {
+        padding-left: 40px;
     }
 }
 
