--- a/styles/Section1.scss
+++ b/styles/Section1.scss
@@ -141,23 +141,23 @@
 
 }
 
-// .example1 {
-//     margin-right: 3rem;
-//     position: relative;
-//     top: -20px;
-// }
+.example1 {
+    margin-right: 3rem;
+    position: relative;
+    top: -20px;
+}
 
-// .example2 {
-//     margin-right: -3rem;
-//     position: relative;
+.example2 {
+    margin-right: -3rem;
+    position: relative;
     
-// }
+}
 
-// .example3 {
-//     margin-right: 5rem;
-//     position: relative;
-//     bottom: -20px;
-// }
+.example3 {
+    margin-right: 5rem;
+    position: relative;
+    bottom: -20px;
+}
 
 @media (max-width: 1100px) {
     .section1-container {
@@ -179,6 +179,7 @@
                 justify-content: space-between;
                 width: 100%;
                 position: relative;
+                margin-left: 3.5rem;
             }
         }
         .container1 {
@@ -186,12 +187,21 @@
         }
 
     }
+    .example1 {
+        margin-right: -4rem;
+        margin-left: -2rem;
+        margin-top: -17rem;
+    }
+
     .example2 {
-        margin-left: -10rem;
+        margin-right: calc(100vh - 128vh);
+        margin-top: -15rem;
     }
 
     .example3 {
-        margin-left: -10rem;
+        margin-left: -90%;
+        margin-right: 0rem;
+        margin-bottom: 2.5rem;
     }
 
 }
