--- a/styles/Editor.scss
+++ b/styles/Editor.scss
@@ -5,10 +5,10 @@
     flex-basis: 0;
     display: flex;
     flex-direction: column;
-    height: 100%;
+    height: 91%;
     border-top: solid 0.3px #34363e;
     border-right: solid 0.3px #34363e;
-    
+    width: -webkit-fill-available;
 
     .editor-header {
         width: fit-content;
@@ -44,13 +44,15 @@
     }
     .cm-line {
         background-color: #1d1e22 !important;
+        word-wrap: break-word;
+        white-space: pre-wrap;
+        word-break: normal;
     }
     .cm-editor {
         height: 100%;
     }
     .cm-content {
         background: #1d1e22 !important;
-        overflow: auto;
         height: 20rem;
     }
     .cm-theme-light {
