--- a/styles/Editor.scss
+++ b/styles/Editor.scss
@@ -5,10 +5,11 @@
     flex-basis: 0;
     display: flex;
     flex-direction: column;
-    height: 91%;
+    height: 100%;
     border-top: solid 0.3px #34363e;
     border-right: solid 0.3px #34363e;
     width: -webkit-fill-available;
+    overflow: hidden;
 
     .editor-header {
         width: fit-content;
@@ -53,7 +54,7 @@
     }
     .cm-content {
         background: #1d1e22 !important;
-        height: 20rem;
+        position: absolute;
     }
     .cm-theme-light {
         height: 100%;
@@ -76,5 +77,19 @@
 
     .cm-scroller {
         background-color: #1d1e22;
+        html::-webkit-scrollbar {
+            width: 20px; 
+         }
+        
+        html::-webkit-scrollbar-track {
+          background-color: #131417;
+        }
+        
+        
+        html::-webkit-scrollbar-thumb {
+          background: #2c2c2c;
+          border-radius: 25px;
+        }
     }
 }
+
