--- a/styles/Global.scss
+++ b/styles/Global.scss
@@ -6,6 +6,20 @@
     margin: 0;
 }
 
+html::-webkit-scrollbar {
+    width: 20px; 
+ }
+
+html::-webkit-scrollbar-track {
+  background-color: #131417;
+}
+
+
+html::-webkit-scrollbar-thumb {
+  background: #2c2c2c;
+  border-radius: 25px;
+}
+
 html {
     background-color: #131417;
     height: 100vh;
