--- a/styles/Header.scss
+++ b/styles/Header.scss
@@ -26,7 +26,7 @@
         }
 
         .header-icons {
-            filter: invert(95%) sepia(100%) saturate(0%) hue-rotate(168deg) brightness(118%) contrast(100%);
+            filter: invert(30%) sepia(100%) saturate(0%) hue-rotate(168deg) brightness(118%) contrast(100%);
         }
 
         .header-icon1 {
@@ -42,6 +42,7 @@
             padding-left: 1vw;
             &:focus {
                 border: none;
+                outline: none;
             }
         }
     
