--- a/styles/Codepen.scss
+++ b/styles/Codepen.scss
@@ -1,5 +1,5 @@
 .editors-wrapper {
-    min-height: 40vh !important;
+    height: calc(40% - 5px);
     .editors {
         display: flex;
         height: 100%;
@@ -8,9 +8,9 @@
     .left-divider-wrapper {
         display: flex;
         .left-divider {
-            height: calc(100% - 1px);
+            height: calc(50% - 1px);
             width: 18px;
-            background-color: black;
+            background-color: #131417;
             display: flex !important;
             border-top: solid 0.3px #34363e;
             border-bottom: solid 0.3px #34363e;
@@ -28,12 +28,15 @@
 .gutter-vertical {
     height: 18px !important;
     border-top: 0.3px solid #34363e;
+    border-right: 0.3px solid #34363e;
     &:hover {
         cursor: row-resize;
     }
 }
 
 .iframe {
+    height: 100%;
+    overflow-y: scroll;
 
     iframe {
         background-color: white;
@@ -41,4 +44,10 @@
         width: 100%;
         left: 0;
     }
+}
+
+.footer {
+    height: 100%;
+    color: black;
+    background: white;
 }
