--- a/styles/EditorHeader.scss
+++ b/styles/EditorHeader.scss
@@ -28,11 +28,11 @@
     }
 
     .editor-header-input {
-        background-color: #060606;
+        background-color: #131417;
         border: none;
         font-size: 20px;
         color: white;
-        width: 5rem;
+        width: fit-content;
         font-family: 'Lato', sans-serif;
         font-weight: 700;
         &:focus {
