--- a/styles/Global.scss
+++ b/styles/Global.scss
@@ -7,7 +7,7 @@
 }
 
 html::-webkit-scrollbar {
-    width: 20px; 
+    width: 10px; 
  }
 
 html::-webkit-scrollbar-track {
@@ -17,7 +17,10 @@ html::-webkit-scrollbar-track {
 
 html::-webkit-scrollbar-thumb {
   background: #2c2c2c;
-  border-radius: 25px;
+}
+
+.split {
+    height: 88% !important;
 }
 
 html {
@@ -46,5 +49,7 @@ html {
     #__next {
         height: 100%;
         margin: 0;
+        position: absolute;
+        width: 100%;
     }
 }
