--- a/styles/Sidebar.scss
+++ b/styles/Sidebar.scss
@@ -13,6 +13,10 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+
+        .sidebar-icon {
+            filter: invert(0%) sepia(100%) saturate(0%) hue-rotate(168deg) brightness(118%) contrast(100%)
+        }
     
         .sidebar-subtitle {
             font-family: 'Inconsolata', monospace;
@@ -31,6 +35,7 @@
             align-items: center;
             margin: 3vh;
             border-radius: 5px;
+            cursor: pointer;
         }
     
         .sidebar-span {
