--- a/styles/Editor.scss
+++ b/styles/Editor.scss
@@ -49,6 +49,7 @@
         white-space: pre-wrap;
         word-break: normal;
         padding: 0px 2px 0 40px !important;
+        width: 20rem;
     }
     .cm-editor {
         height: 100%;
