--- a/styles/Section1.scss
+++ b/styles/Section1.scss
@@ -210,6 +210,17 @@
 @media (max-width: 830px) {
     .section1-container {
         padding-left: 40px;
+        padding-bottom: 5rem;
+    }
+    .container1 {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: auto;
+
+    }
+    .section1-subtitle {
+        width: auto !important;
     }
 }
 
